--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width = 1280" name="viewport">
+    <meta content="width = 1920" name="viewport">
     <title>Title</title>
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.css">
     <link rel="stylesheet" href="./css/build.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
+          integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 <body>
 <section>
@@ -76,14 +80,14 @@
         </div>
     </div>
 </section>
-<section class="bg-danger">
+<section class="big-slider bg-danger">
     TODO slider
 </section>
 <section class="bg-white-uzor main-section">
     <div class="container">
         <div class="row">
             <div class="col-8 mx-auto text-center">
-                <h2 class="text-deepBlue fw-bold mb43">ЧИСТОЕ СЕРЕБРО</h2>
+                <h1 class="text-deepBlue fw-bold mb43">ЧИСТОЕ СЕРЕБРО</h1>
                 <p class="primary-text">«Чистое серебро» на ювелирном рынке с 2000 года. Наше предприятие, имея богатый
                     опыт и накопленные традиции, идет в ногу со временем, при этом мы всегда остаемся собой.
                 </p>
@@ -152,13 +156,109 @@
         </div>
     </div>
 </section>
+<section class="slider jeweleries">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1 class="text-deepBlue fw-bold text-uppercase mb-2">Украшения</h1>
+                <p class="primary-text">Урашения, которые есть в нашей сети</p>
+            </div>
+            <div class="col-12 px-0 slider-nav">
+                <div class="slider-nav--item">
+                    <button>Браслеты</button>
+                </div>
+                <div class="slider-nav--item">
+                    <button>Цепи</button>
+                </div>
+                <div class="slider-nav--item">
+                    <button>Кольца</button>
+                </div>
+                <div class="slider-nav--item">
+                    <button>Серьги</button>
+                </div>
+                <div class="slider-nav--item">
+                    <button>Подвески и кулоны</button>
+                </div>
+                <div class="slider-nav--item">
+                    <button>Броши</button>
+                </div>
+            </div>
+            <div class="col-12 slider-container">
+                <div class="slider-constructor jelewelery-slider owl-carousel owl-theme">
+                    <div class="slider-item">
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/1.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div> <div class="slider-item">
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/2.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div> <div class="slider-item">
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/3.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div> <div class="slider-item">
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/4.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                </div>
+                <div class="slider-navigation">
+                    <div class="arrow left"></div>
+                    <div class="arrow right"></div>
+                </div>
+            </div>
+            <div class="col-12 text-center">
+                <button class="button btn-blue">Показать весь каталог</button>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="promo-woman">
     <div class="container">
         <div class="row">
             <div class="col-5 offset-1 text-center">
                 <img src="./assets/logo@2x.png" width="305" alt="" class="logo">
                 <img src="./assets/splitter-white.png" alt="" class="logo">
-                <p class="promo-description">Чистое серебро отобрало для вас самые лучшие украшения из серебра на любой вкус и кошелек. Приходи и выбери из
+                <p class="promo-description">Чистое серебро отобрало для вас самые лучшие украшения из серебра на любой
+                    вкус и кошелек. Приходи и выбери из
                     <span class="text-blue">10 000 наименований</span> - свое уникальное украшения.
                 </p>
             </div>
@@ -166,5 +266,98 @@
 
     </div>
 </section>
+<section class="subscribe-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-auto mx-auto">
+                <h2>Подпишитесь! Новинки, скидки, предложения!</h2>
+                <div class="subscribe-block">
+                    <input type="text" placeholder="Ваша электронная почта">
+                    <button class="button btn-gray">Подписаться</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-auto text-center">
+                <img src="./assets/logo@2x.png" width="196" alt="" class="logo">
+                <p class="copyright">© 2018 год АО «Чистое Серебро»</p>
+                <p><a href="tel:7 (800) 775-68-37" class="phone">7 (800) 775-68-37</a></p>
+                <button class="button btn-blue">Заказать звонок</button>
+            </div>
+            <div class="col-auto">
+                <div class="footer-menu">
+                    <p class="footer-menu--name">О компании</p>
+                    <a href="#" class="footer-menu--item">Каталог продукции</a>
+                    <a href="#" class="footer-menu--item">О компании</a>
+                    <a href="#" class="footer-menu--item">Акации</a>
+                    <a href="#" class="footer-menu--item">Франшиза</a>
+                    <a href="#" class="footer-menu--item">Фирменные магазины</a>
+                    <a href="#" class="footer-menu--item">Политика конфиденциальности</a>
+                </div>
+            </div>
+            <div class="col-auto">
+                <div class="footer-menu">
+                    <p class="footer-menu--name">Украшения</p>
+                    <a href="#" class="footer-menu--item">Кольца</a>
+                    <a href="#" class="footer-menu--item">Серьги</a>
+                    <a href="#" class="footer-menu--item">Подвески</a>
+                    <a href="#" class="footer-menu--item">Цепи</a>
+                    <a href="#" class="footer-menu--item">Браслеты</a>
+                    <a href="#" class="footer-menu--item">Другое</a>
+                </div>
+            </div>
+            <div class="col-auto">
+                <div class="footer-menu">
+                    <p class="footer-menu--name">Способ оплаты</p>
+                    <div class="payment-block">
+                        <div class="payment-item">
+                            <img src="./assets/visa@2x.png" width="78" alt="">
+                        </div>
+                        <div class="payment-item">
+                            <img src="./assets/1200px-Mastercard-logo@2x.png" width="46" alt="">
+                        </div>
+                    </div>
+                    <p class="footer-menu--name">Мы в социальных сетях</p>
+                    <div class="social-block">
+                        <div class="social-block-item">
+                            <a href="#"><i class="fab fa-vk"></i></a>
+                        </div>
+                        <div class="social-block-item">
+                            <a href="#"> <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </div>
+                        <div class="social-block-item">
+                            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                        </div>
+                        <div class="social-block-item">
+                            <a href="#"> <i class="fab fa-instagram"></i></a>
+                        </div>
+                        <div class="social-block-item">
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script>
+    $('.jelewelery-slider').owlCarousel({
+        dots: true,
+        items: 4,
+        margin: 15,
+        loop: true
+    });
+</script>
 </body>
 </html>
