finished main sliders and index page

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </div>
     </div>
 </section>
+
 <section class="header-slider">
     <button class="slider-arrow left">
 
@@ -151,6 +152,7 @@
     </div>
 
 </section>
+
 <section class="bg-white-uzor main-section">
     <div class="container">
         <div class="row">
@@ -224,8 +226,12 @@
         </div>
     </div>
 </section>
+
 <section class="slider jeweleries">
     <div class="container">
+
+        <button class="arrow left"><img src="./assets/arrow.png" alt=""></button>
+        <button class="arrow right"><img src="./assets/arrow.png" alt=""></button>
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="text-deepBlue fw-bold text-uppercase mb-2">Украшения</h1>
@@ -253,6 +259,110 @@
             </div>
             <div class="col-12 slider-container">
                 <div class="slider-constructor jelewelery-slider owl-carousel owl-theme">
+                    <div class="slider-item">
+                        <div class="promo-label">
+                            <p class="sale-amount">10%</p>
+                            <p class="text">скидка</p>
+                        </div>
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/1.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <div class="promo-label new">
+                            new
+                        </div>
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/2.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/3.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <h3>Браслет</h3>
+                        <div class="item-img">
+                            <img src="./assets/sliders-first/4.png" alt="">
+                        </div>
+                        <div class="item-price-block">
+                            <span class="old-price">990 руб.</span>
+                            <span class="price"> от 790 руб.</span>
+                        </div>
+                        <div class="item-btn-block">
+                            <button class="button outline-gray">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                    <div class="slider-item">1</div>
+                </div>
+            </div>
+            <div class="col-12 text-center">
+                <button class="button btn-blue">Показать весь каталог</button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="promo-woman">
+    <div class="container">
+        <div class="row">
+            <div class="col-5 offset-1 text-center">
+                <img src="./assets/logo@2x.png" width="305" alt="" class="logo">
+                <img src="./assets/splitter-white.png" alt="" class="logo">
+                <p class="promo-description">Чистое серебро отобрало для вас самые лучшие украшения из серебра на любой
+                    вкус и кошелек. Приходи и выбери из
+                    <span class="text-blue">10 000 наименований</span> - свое уникальное украшения.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="slider hits">
+    <div class="container">
+
+        <button class="arrow left"><img src="./assets/arrow.png" alt=""></button>
+        <button class="arrow right"><img src="./assets/arrow.png" alt=""></button>
+        <div class="row justify-content-center">
+            <div class="col-auto gray-splitter"></div>
+            <div class="col-auto text-center">
+                <h1 class="text-deepBlue fw-bold text-uppercase ">хиты продаж</h1>
+            </div>
+            <div class="col-auto gray-splitter"></div>
+        </div>
+        <div class="row">
+            <div class="col-12 slider-container">
+                <div class="slider-constructor hits-slider owl-carousel owl-theme">
                     <div class="slider-item">
                         <h3>Браслет</h3>
                         <div class="item-img">
@@ -311,10 +421,6 @@
                     <div class="slider-item">1</div>
                     <div class="slider-item">1</div>
                 </div>
-                <div class="slider-navigation">
-                    <div class="arrow left"></div>
-                    <div class="arrow right"></div>
-                </div>
             </div>
             <div class="col-12 text-center">
                 <button class="button btn-blue">Показать весь каталог</button>
@@ -322,21 +428,7 @@
         </div>
     </div>
 </section>
-<section class="promo-woman">
-    <div class="container">
-        <div class="row">
-            <div class="col-5 offset-1 text-center">
-                <img src="./assets/logo@2x.png" width="305" alt="" class="logo">
-                <img src="./assets/splitter-white.png" alt="" class="logo">
-                <p class="promo-description">Чистое серебро отобрало для вас самые лучшие украшения из серебра на любой
-                    вкус и кошелек. Приходи и выбери из
-                    <span class="text-blue">10 000 наименований</span> - свое уникальное украшения.
-                </p>
-            </div>
-        </div>
 
-    </div>
-</section>
 <section class="subscribe-section">
     <div class="container">
         <div class="row">
@@ -350,6 +442,7 @@
         </div>
     </div>
 </section>
+
 <footer>
     <div class="container">
         <div class="row justify-content-between align-items-center">
@@ -423,18 +516,51 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script>
-    $('.jelewelery-slider').owlCarousel({
+    var jewelerySlider = $('.jelewelery-slider'),
+        hitsSlider = $('.hits-slider'),
+        headerSlider = $('.header-slider .slider-constructor');
+
+    jewelerySlider.owlCarousel({
         dots: true,
         items: 4,
         margin: 16,
         loop: true
     });
-    $('.header-slider .slider-constructor').owlCarousel({
+    $('.jeweleries .left').on('click', function () {
+        jewelerySlider.trigger('prev.owl.carousel')
+    });
+    $('.jeweleries .right').on('click', function () {
+        jewelerySlider.trigger('next.owl.carousel')
+    });
+
+
+    hitsSlider.owlCarousel({
+        dots: true,
+        items: 4,
+        margin: 16,
+        loop: true
+    });
+
+    $('.hits .left').on('click', function () {
+        hitsSlider.trigger('prev.owl.carousel')
+    });
+    $('.hits .right').on('click', function () {
+        hitsSlider.trigger('next.owl.carousel')
+    });
+
+
+    headerSlider.owlCarousel({
         dots: true,
         items: 1,
         margin: 0,
         loop: true,
-        autoHeight:true
+        autoHeight: true
+    });
+    $('.header-slider .left').on('click', function () {
+        headerSlider.trigger('prev.owl.carousel')
+    });
+    $('.header-slider .right').on('click', function () {
+        headerSlider.trigger('next.owl.carousel')
     });
 </script>
 </body>
