--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <p class="primary-text">Урашения, которые есть в нашей сети</p>
             </div>
             <div class="col-12 px-0 slider-nav">
-                <div class="slider-nav--item">
+                <div class="slider-nav--item active">
                     <button>Браслеты</button>
                 </div>
                 <div class="slider-nav--item">
