--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width = 1920,initial-scale=1" name="viewport">
+    <meta content="width = device-width,initial-scale=1" name="viewport">
     <title>Title</title>
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -74,12 +74,12 @@
     </div>
     <div class="container top-nav">
         <div class="row top-nav--row">
-            <div class="col-auto top-nav--item"><a href="#">Главная</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Каталог продукции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">О компании</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Акции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Франшиза</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Фирменные магазины</a></div>
+            <div class="col-auto top-nav--item"><a href="index.html">Главная</a></div>
+            <div class="col-auto top-nav--item"><a href="catalog.html">Каталог продукции</a></div>
+            <div class="col-auto top-nav--item"><a href="about.html">О компании</a></div>
+            <div class="col-auto top-nav--item"><a href="sales.html">Акции</a></div>
+            <div class="col-auto top-nav--item"><a href="franshize.html">Франшиза</a></div>
+            <div class="col-auto top-nav--item"><a href="magazines.html">Фирменные магазины</a></div>
         </div>
     </div>
 </section>
@@ -169,7 +169,8 @@
         <div class="row ">
             <div class="col-8 mx-auto text-center px-0">
                 <h1 class="text-deepBlue fw-bold text-uppercase circe">О компании</h1>
-                <p class="primary-text circe">АО «Чистое Серебро» на ювелирном рынке с 2005 года. Наши магазины, имея богатый опыт и накопленные традиции, идет в ногу со временем, при этом мы всегда остаемся собой.</p>
+                <p class="primary-text circe">АО «Чистое Серебро» на ювелирном рынке с 2005 года. Наши магазины, имея
+                    богатый опыт и накопленные традиции, идет в ногу со временем, при этом мы всегда остаемся собой.</p>
             </div>
             <div class="col-12  promo-block">
                 <div class="row">
@@ -180,7 +181,8 @@
                             <img src="./assets/white-flower.png" alt="">
                             <div class="split-item-white"></div>
                         </div>
-                        <p class="primary-text">Чистое серебро отобрало для вас самые лучшие украшения из серебра на любой вкус и кошелек. Приходи и выбери из
+                        <p class="primary-text">Чистое серебро отобрало для вас самые лучшие украшения из серебра на
+                            любой вкус и кошелек. Приходи и выбери из
                             <span class="text-blue">10 000 наименований </span>- свое уникальное украшения.</p>
                     </div>
                 </div>
@@ -194,7 +196,11 @@
         <div class="row">
             <div class="col-5">
                 <h3 class="text-blue fw-bold ">Качество</h3>
-                <p class="primary-text circe">Наш подход к качеству одинаков к любому изделию, выпускаемому заводом. Для всех видов изделий используется только высококачественное сырье и банковская чистота золота. Гранится собственными руками фианит, полудрагоценный и поделочный камень. Контроль качества обязателен на всех участках работ, для любого вида изделий. Мы каждую модель доводим до совершенства!</p>
+                <p class="primary-text circe">Наш подход к качеству одинаков к любому изделию, выпускаемому заводом. Для
+                    всех видов изделий используется только высококачественное сырье и банковская чистота золота.
+                    Гранится собственными руками фианит, полудрагоценный и поделочный камень. Контроль качества
+                    обязателен на всех участках работ, для любого вида изделий. Мы каждую модель доводим до
+                    совершенства!</p>
             </div>
         </div>
     </div>
@@ -208,7 +214,8 @@
             </div>
             <div class="col-4 px-0 ml-auto">
                 <h3 class="text-blue fw-bold ">Доверие</h3>
-                <p class="primary-text circe">Наши покупатели на протяжении многих лет остаются с нами, ждут выхода новых коллекций, новых авторских работ, а это лучшее признание и награда для производителя.</p>
+                <p class="primary-text circe">Наши покупатели на протяжении многих лет остаются с нами, ждут выхода
+                    новых коллекций, новых авторских работ, а это лучшее признание и награда для производителя.</p>
             </div>
         </div>
     </div>
@@ -219,7 +226,9 @@
         <div class="row align-items-center">
             <div class="about-description">
                 <h3 class="text-blue fw-bold ">Индивидуальность</h3>
-                <p class="primary-text circe">Ручной труд мастера огранки, мастера ювелира передает весь замысел и красоту камня. В связи с этим, наши художники, разрабатывая изделия, которые требует массовый рынок, не теряют свою индивидуальность и завод всегда остается узнаваемым даже в массовом производстве.</p>
+                <p class="primary-text circe">Ручной труд мастера огранки, мастера ювелира передает весь замысел и
+                    красоту камня. В связи с этим, наши художники, разрабатывая изделия, которые требует массовый рынок,
+                    не теряют свою индивидуальность и завод всегда остается узнаваемым даже в массовом производстве.</p>
             </div>
         </div>
     </div>
