--- a/franshize.html
+++ b/franshize.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width = 1920,initial-scale=1" name="viewport">
+    <meta content="width = device-width,initial-scale=1" name="viewport">
     <title>Title</title>
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -74,12 +74,12 @@
     </div>
     <div class="container top-nav">
         <div class="row top-nav--row">
-            <div class="col-auto top-nav--item"><a href="#">Главная</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Каталог продукции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">О компании</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Акции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Франшиза</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Фирменные магазины</a></div>
+            <div class="col-auto top-nav--item"><a href="index.html">Главная</a></div>
+            <div class="col-auto top-nav--item"><a href="catalog.html">Каталог продукции</a></div>
+            <div class="col-auto top-nav--item"><a href="about.html">О компании</a></div>
+            <div class="col-auto top-nav--item"><a href="sales.html">Акции</a></div>
+            <div class="col-auto top-nav--item"><a href="franshize.html">Франшиза</a></div>
+            <div class="col-auto top-nav--item"><a href="magazines.html">Фирменные магазины</a></div>
         </div>
     </div>
 </section>
