--- a/magazines.html
+++ b/magazines.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width = 1920,initial-scale=1" name="viewport">
+    <meta content="width = device-width,initial-scale=1" name="viewport">
     <title>Title</title>
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -74,12 +74,12 @@
     </div>
     <div class="container top-nav">
         <div class="row top-nav--row">
-            <div class="col-auto top-nav--item"><a href="#">Главная</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Каталог продукции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">О компании</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Акции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Франшиза</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Фирменные магазины</a></div>
+            <div class="col-auto top-nav--item"><a href="index.html">Главная</a></div>
+            <div class="col-auto top-nav--item"><a href="catalog.html">Каталог продукции</a></div>
+            <div class="col-auto top-nav--item"><a href="about.html">О компании</a></div>
+            <div class="col-auto top-nav--item"><a href="sales.html">Акции</a></div>
+            <div class="col-auto top-nav--item"><a href="franshize.html">Франшиза</a></div>
+            <div class="col-auto top-nav--item"><a href="magazines.html">Фирменные магазины</a></div>
         </div>
     </div>
 </section>
@@ -190,9 +190,12 @@
                 </h4>
 
                 <div class="contacts-block">
-                    <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
-                    <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a href="tel:+7 (985) 974-17-58" class="contact-text" >+7 (985) 974-17-58 </a></div>
-                    <div class="contact"><img src="./assets/magazine/mail-icon.png" width="26" alt=""> <a href="mailto:aviapark@chistoe-serebro.ru" class="contact-text">aviapark@chistoe-serebro.ru
+                    <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span
+                            class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
+                    <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a
+                            href="tel:+7 (985) 974-17-58" class="contact-text">+7 (985) 974-17-58 </a></div>
+                    <div class="contact"><img src="./assets/magazine/mail-icon.png" width="26" alt=""> <a
+                            href="mailto:aviapark@chistoe-serebro.ru" class="contact-text">aviapark@chistoe-serebro.ru
                     </a></div>
                 </div>
                 <img src="./assets/magazine/geo1.png" alt="" class="img-fluid">
@@ -206,9 +209,12 @@
                 </h4>
 
                 <div class="contacts-block pl-4">
-                    <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
-                    <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a href="tel:+7 (985) 974-17-58" class="contact-text" >+7 (985) 974-17-58 </a></div>
-                    <div class="contact"><img src="./assets/magazine/mail-icon.png" width="26" alt=""> <a href="mailto:aviapark@chistoe-serebro.ru" class="contact-text">aviapark@chistoe-serebro.ru
+                    <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span
+                            class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
+                    <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a
+                            href="tel:+7 (985) 974-17-58" class="contact-text">+7 (985) 974-17-58 </a></div>
+                    <div class="contact"><img src="./assets/magazine/mail-icon.png" width="26" alt=""> <a
+                            href="mailto:aviapark@chistoe-serebro.ru" class="contact-text">aviapark@chistoe-serebro.ru
                     </a></div>
                 </div>
                 <img src="./assets/magazine/geo1.png" alt="" class="img-fluid">
@@ -244,9 +250,12 @@
                 </h4>
 
                 <div class="contacts-block">
-                    <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
-                    <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a href="tel:+7 (985) 974-17-58" class="contact-text" >+7 (985) 974-17-58 </a></div>
-                    <div class="contact"><img src="./assets/magazine/mail-icon.png" width="26" alt=""> <a href="mailto:aviapark@chistoe-serebro.ru" class="contact-text">aviapark@chistoe-serebro.ru
+                    <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span
+                            class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
+                    <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a
+                            href="tel:+7 (985) 974-17-58" class="contact-text">+7 (985) 974-17-58 </a></div>
+                    <div class="contact"><img src="./assets/magazine/mail-icon.png" width="26" alt=""> <a
+                            href="mailto:aviapark@chistoe-serebro.ru" class="contact-text">aviapark@chistoe-serebro.ru
                     </a></div>
                 </div>
                 <img src="./assets/magazine/geo1.png" alt="" class="img-fluid">
