--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width = 1920,initial-scale=1" name="viewport">
+    <meta content="width = device-width,initial-scale=1" name="viewport">
     <title>Title</title>
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -74,12 +74,12 @@
     </div>
     <div class="container top-nav">
         <div class="row top-nav--row">
-            <div class="col-auto top-nav--item"><a href="#">Главная</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Каталог продукции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">О компании</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Акции</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Франшиза</a></div>
-            <div class="col-auto top-nav--item"><a href="#">Фирменные магазины</a></div>
+            <div class="col-auto top-nav--item"><a href="index.html">Главная</a></div>
+            <div class="col-auto top-nav--item"><a href="catalog.html">Каталог продукции</a></div>
+            <div class="col-auto top-nav--item"><a href="about.html">О компании</a></div>
+            <div class="col-auto top-nav--item"><a href="sales.html">Акции</a></div>
+            <div class="col-auto top-nav--item"><a href="franshize.html">Франшиза</a></div>
+            <div class="col-auto top-nav--item"><a href="magazines.html">Фирменные магазины</a></div>
         </div>
     </div>
 </section>
@@ -173,12 +173,18 @@
             </div>
             <div class="col-12 col-xl-3 catalog-menu px-0">
                 <div class="row menu-row mx-0">
-                    <a href="#" class="catalog-menu-item">Браслеты <img src="./assets/menu-arrow.png" alt="" class="ml-auto" ></a>
-                    <a href="#" class="catalog-menu-item">Цепи <img src="./assets/menu-arrow.png" alt="" class="ml-auto" ></a>
-                    <a href="#" class="catalog-menu-item">Кольца <img src="./assets/menu-arrow.png" alt="" class="ml-auto" ></a>
-                    <a href="#" class="catalog-menu-item">Серьги <img src="./assets/menu-arrow.png" alt="" class="ml-auto" ></a>
-                    <a href="#" class="catalog-menu-item">Подвески и кулоны <img src="./assets/menu-arrow.png" alt="" class="ml-auto" ></a>
-                    <a href="#" class="catalog-menu-item">Броши <img src="./assets/menu-arrow.png" alt="" class="ml-auto" ></a>
+                    <a href="#" class="catalog-menu-item">Браслеты <img src="./assets/menu-arrow.png" alt=""
+                                                                        class="ml-auto"></a>
+                    <a href="#" class="catalog-menu-item">Цепи <img src="./assets/menu-arrow.png" alt=""
+                                                                    class="ml-auto"></a>
+                    <a href="#" class="catalog-menu-item">Кольца <img src="./assets/menu-arrow.png" alt=""
+                                                                      class="ml-auto"></a>
+                    <a href="#" class="catalog-menu-item">Серьги <img src="./assets/menu-arrow.png" alt=""
+                                                                      class="ml-auto"></a>
+                    <a href="#" class="catalog-menu-item">Подвески и кулоны <img src="./assets/menu-arrow.png" alt=""
+                                                                                 class="ml-auto"></a>
+                    <a href="#" class="catalog-menu-item">Броши <img src="./assets/menu-arrow.png" alt=""
+                                                                     class="ml-auto"></a>
                 </div>
             </div>
             <div class="col-12 col-xl-9 pr-0 catalog-grid-container">
@@ -309,14 +315,16 @@
                     </div>
                     <div class="col-12  pagination">
                         <div class="pagination-container">
-                            <button class="arrow"><img src="./assets/pagination-arrow-left.png" width="9" alt=""></button>
+                            <button class="arrow"><img src="./assets/pagination-arrow-left.png" width="9" alt="">
+                            </button>
                             <a href="#" class="pagination-item">1</a>
                             <a href="#" class="pagination-item">2</a>
                             <a href="#" class="pagination-item active">3</a>
                             <a href="#" class="pagination-item">4</a>
                             <a href="#" class="pagination-item">5</a>
                             <a href="#" class="pagination-item">6</a>
-                            <button class="arrow"><img src="./assets/pagination-arrow-right.png" width="9" alt=""></button>
+                            <button class="arrow"><img src="./assets/pagination-arrow-right.png" width="9" alt="">
+                            </button>
                         </div>
                     </div>
                 </div>
